[gd_scene load_steps=6 format=3 uid="uid://i4nnwgwck615"]

[ext_resource type="Script" path="res://src/ui_components/visual_formation/visual_formation.gd" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://themes/default/theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://n0wgfgg75cab" path="res://assets/field-half.png" id="3_1l72w"]
[ext_resource type="PackedScene" uid="uid://b2mwv4cl5sm6t" path="res://src/ui_components/swtich_option_button/switch_option_button.tscn" id="4_bi7d8"]
[ext_resource type="PackedScene" uid="uid://mvca6wjq0pv6" path="res://src/ui_components/player_list/player_list.tscn" id="5_42mf7"]

[node name="VisualFormation" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("1")

[node name="PlayerList" parent="." instance=ExtResource("5_42mf7")]
layout_mode = 2

[node name="LineUp" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="FormationSelect" parent="LineUp" instance=ExtResource("4_bi7d8")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="LineUp"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Field" type="Control" parent="LineUp"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="LineUp/Field"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1l72w")
stretch_mode = 5

[node name="Players" type="VBoxContainer" parent="LineUp/Field"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Attack" type="HBoxContainer" parent="LineUp/Field/Players"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Center" type="HBoxContainer" parent="LineUp/Field/Players"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Defense" type="HBoxContainer" parent="LineUp/Field/Players"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Goalkeeper" type="HBoxContainer" parent="LineUp/Field/Players"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Subs" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="List" type="VBoxContainer" parent="Subs"]
layout_mode = 2
alignment = 1

[connection signal="item_selected" from="LineUp/FormationSelect" to="." method="_on_formation_button_item_selected"]
